--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,9 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=
 file.reference.NetBeansProjects-WE04-Exercises=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.NetBeansProjects-WE04-Exercises}
+start.file=jQuery_exercises/public_html/index.html
 test.folder=
+web.context.root=/WE04-Exercises
